[gd_scene load_steps=84 format=3 uid="uid://bvwmo82cyd0q0"]

[ext_resource type="Script" uid="uid://y2tt360huxpr" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://iuhfx8p43nfe" path="res://Arts/mystic_woods_free_2.2/characters/player.png" id="2_6t5aa"]
[ext_resource type="Script" uid="uid://0h26xu3ovuc8" path="res://Scripts/heart.gd" id="3_6t5aa"]
[ext_resource type="Texture2D" uid="uid://56l8fd2byama" path="res://Arts/Wave1.png" id="4_fd4e3"]
[ext_resource type="Script" uid="uid://c4w70kgdcl11b" path="res://Scripts/level_up.gd" id="4_h4iuc"]
[ext_resource type="FontFile" uid="uid://blyvulok4pntd" path="res://Arts/Font/Ubuntu/Ubuntu-Medium.ttf" id="5_fd4e3"]
[ext_resource type="Texture2D" uid="uid://d3c8mhthortqb" path="res://Arts/levelup.jpg" id="6_qqcod"]
[ext_resource type="Script" uid="uid://dsatte5i0y7cn" path="res://Scripts/start.gd" id="7_igrcy"]
[ext_resource type="Texture2D" uid="uid://dsw3hhb3bkapq" path="res://Arts/bg.png" id="8_fs7ks"]
[ext_resource type="Texture2D" uid="uid://26qgp3vsku56" path="res://Arts/start_ui.png" id="9_l6n3p"]
[ext_resource type="Texture2D" uid="uid://brin2khseqtqr" path="res://Arts/x_white.png" id="10_olqyp"]
[ext_resource type="AudioStream" uid="uid://05oow3b5k6yf" path="res://Arts/starter.mp3" id="11_igrcy"]
[ext_resource type="Script" uid="uid://bvfaup4u3dn85" path="res://Scripts/death.gd" id="11_wpjfl"]
[ext_resource type="Script" uid="uid://buotcodrs6aqf" path="res://Scripts/time.gd" id="12_bi64h"]
[ext_resource type="Texture2D" uid="uid://43dk6cp2so0d" path="res://Arts/conn.png" id="13_2ijsl"]
[ext_resource type="Texture2D" uid="uid://d143vhpkmuibo" path="res://Arts/stop.png" id="14_p1odr"]
[ext_resource type="Texture2D" uid="uid://vlcca16352cb" path="res://Arts/quest.png" id="15_0gysh"]
[ext_resource type="AudioStream" uid="uid://b0tiw8qj8uf14" path="res://Arts/sword-sound.mp3" id="17_qqcod"]
[ext_resource type="AudioStream" uid="uid://48olwy5owlxb" path="res://Arts/slime-less.mp3" id="19_fs7ks"]
[ext_resource type="AudioStream" uid="uid://gmto3p2w78t3" path="res://Arts/game-over.mp3" id="20_olqyp"]
[ext_resource type="AudioStream" uid="uid://n3n6f41dxhjt" path="res://Arts/player-taken.mp3" id="21_wpjfl"]
[ext_resource type="AudioStream" uid="uid://drky7x3g86lji" path="res://Arts/click.mp3" id="22_wpjfl"]
[ext_resource type="AudioStream" uid="uid://cjla7m7f740uf" path="res://Arts/recovery.mp3" id="23_bi64h"]
[ext_resource type="AudioStream" uid="uid://b6a4phaljsoy" path="res://Arts/heart-beat.mp3" id="24_2ijsl"]
[ext_resource type="AudioStream" uid="uid://dkkaemjfj8clp" path="res://Arts/level-up.mp3" id="25_p1odr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4iuc"]
size = Vector2(11, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]
size = Vector2(9, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_6t5aa")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("2_6t5aa")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("2_6t5aa")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("2_6t5aa")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("2_6t5aa")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("2_6t5aa")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("2_6t5aa")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("2_6t5aa")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("2_6t5aa")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("2_6t5aa")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("2_6t5aa")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("2_6t5aa")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("2_6t5aa")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("2_6t5aa")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("2_6t5aa")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("2_6t5aa")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("2_6t5aa")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("2_6t5aa")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("2_6t5aa")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("2_6t5aa")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("2_6t5aa")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("2_6t5aa")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("2_6t5aa")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("2_6t5aa")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("2_6t5aa")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("2_6t5aa")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("2_6t5aa")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddr8"]
atlas = ExtResource("2_6t5aa")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybyf"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfva"]
atlas = ExtResource("2_6t5aa")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ef02"]
atlas = ExtResource("2_6t5aa")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmca"]
atlas = ExtResource("2_6t5aa")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_76oay"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": true,
"name": &"back_attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}],
"loop": true,
"name": &"back_idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}],
"loop": true,
"name": &"death",
"speed": 0.05
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}],
"loop": true,
"name": &"front_attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}],
"loop": true,
"name": &"front_idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}],
"loop": true,
"name": &"front_walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}],
"loop": true,
"name": &"side_attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}],
"loop": true,
"name": &"side_idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajfva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ef02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmca")
}],
"loop": true,
"name": &"side_walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfarp"]
size = Vector2(3.5, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("4_fd4e3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_igrcy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}],
"loop": true,
"name": &"wave",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_y6uwr"]
radius = 274.089

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 3
script = ExtResource("1_cvnsp")

[node name="Hurt_Area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_Area"]
position = Vector2(0.5, 9.5)
shape = SubResource("RectangleShape2D_h4iuc")

[node name="Hurt_Box" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 9.5)
shape = SubResource("RectangleShape2D_cvnsp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_76oay")
animation = &"death"

[node name="Heart" type="Node2D" parent="."]
visible = false
script = ExtResource("3_6t5aa")

[node name="Area_Hit" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Hit_Box" type="CollisionShape2D" parent="Area_Hit"]
position = Vector2(-17, -2)
rotation = -0.785398
scale = Vector2(3, 7)
shape = SubResource("RectangleShape2D_vfarp")

[node name="Sword_wave" type="AnimatedSprite2D" parent="Area_Hit"]
visible = false
position = Vector2(-20, -1)
rotation = 0.785398
sprite_frames = SubResource("SpriteFrames_igrcy")
animation = &"wave"
flip_h = true

[node name="Spawn_Area" type="Area2D" parent="."]
position = Vector2(0, 2)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn_Area"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_y6uwr")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 12)
zoom = Vector2(2.5, 2.5)
limit_left = 0
limit_top = 0
limit_right = 5000
limit_bottom = 5000
limit_smoothed = true

[node name="Level_Up" type="Control" parent="."]
visible = false
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_left = -166.0
offset_top = -60.0
offset_right = 181.0
offset_bottom = 86.0
script = ExtResource("4_h4iuc")

[node name="Select1" type="Panel" parent="Level_Up"]
layout_mode = 0
offset_left = 14.0
offset_top = 5.0
offset_right = 94.0
offset_bottom = 141.0

[node name="TextEdit" type="TextEdit" parent="Level_Up/Select1"]
layout_mode = 0
offset_top = 64.0
offset_right = 80.0
offset_bottom = 136.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_fd4e3")
theme_override_font_sizes/font_size = 8
editable = false

[node name="TextureRect" type="TextureRect" parent="Level_Up/Select1"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 64.0
offset_bottom = 56.0

[node name="Button2" type="Button" parent="Level_Up/Select1"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 80.0
offset_bottom = 136.0

[node name="Button" type="Button" parent="Level_Up/Select1"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 80.0
offset_bottom = 136.0

[node name="Select2" type="Panel" parent="Level_Up"]
layout_mode = 0
offset_left = 126.0
offset_top = 5.0
offset_right = 206.0
offset_bottom = 141.0

[node name="TextEdit" type="TextEdit" parent="Level_Up/Select2"]
layout_mode = 0
offset_top = 64.0
offset_right = 80.0
offset_bottom = 136.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_fd4e3")
theme_override_font_sizes/font_size = 8
editable = false

[node name="TextureRect" type="TextureRect" parent="Level_Up/Select2"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 64.0
offset_bottom = 56.0

[node name="Button" type="Button" parent="Level_Up/Select2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 80.0
offset_bottom = 136.0

[node name="Button2" type="Button" parent="Level_Up/Select2"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 80.0
offset_bottom = 136.0

[node name="Select3" type="Panel" parent="Level_Up"]
layout_mode = 0
offset_left = 238.0
offset_top = 5.0
offset_right = 318.0
offset_bottom = 141.0

[node name="TextEdit" type="TextEdit" parent="Level_Up/Select3"]
layout_mode = 0
offset_top = 64.0
offset_right = 80.0
offset_bottom = 136.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_fd4e3")
theme_override_font_sizes/font_size = 8
editable = false

[node name="TextureRect" type="TextureRect" parent="Level_Up/Select3"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 64.0
offset_bottom = 56.0

[node name="Button" type="Button" parent="Level_Up/Select3"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 80.0
offset_bottom = 136.0

[node name="Button2" type="Button" parent="Level_Up/Select3"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 80.0
offset_bottom = 136.0

[node name="UP" type="TextureRect" parent="Level_Up"]
visible = false
layout_mode = 0
offset_left = 148.0
offset_top = 31.0
offset_right = 188.0
offset_bottom = 39.0
texture = ExtResource("6_qqcod")
expand_mode = 1

[node name="Start" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = -232.0
offset_top = -119.0
offset_right = 232.0
offset_bottom = 145.0
script = ExtResource("7_igrcy")

[node name="background" type="TextureRect" parent="Start"]
z_index = 1
layout_mode = 0
offset_right = 464.0
offset_bottom = 264.0
texture = ExtResource("8_fs7ks")

[node name="Title" type="TextEdit" parent="Start"]
z_index = 2
layout_mode = 0
offset_left = 112.0
offset_top = 24.0
offset_right = 360.0
offset_bottom = 96.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
text = "                    Beta 0.0.1 
     Rogue Like Game By View "
editable = false

[node name="menu" type="TextureRect" parent="Start"]
z_index = 2
layout_mode = 0
offset_left = 168.0
offset_top = 104.0
offset_right = 298.0
offset_bottom = 240.0
texture = ExtResource("9_l6n3p")

[node name="Button3" type="Button" parent="Start/menu"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 9.0
offset_top = 97.0
offset_right = 121.0
offset_bottom = 129.0

[node name="Button2" type="Button" parent="Start/menu"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 9.0
offset_top = 52.0
offset_right = 121.0
offset_bottom = 84.0

[node name="Button1" type="Button" parent="Start/menu"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 121.0
offset_bottom = 39.0

[node name="starter" type="AudioStreamPlayer2D" parent="Start"]
position = Vector2(232, 119)
stream = ExtResource("11_igrcy")
volume_db = 10.0
autoplay = true
parameters/looping = true

[node name="setting" type="TextEdit" parent="."]
visible = false
z_index = 3
offset_left = -120.0
offset_top = -48.0
offset_right = 129.0
offset_bottom = 58.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "   ระดับเสียงเกม
"
editable = false
scroll_fit_content_height = true

[node name="TextureRect" type="TextureRect" parent="setting"]
layout_mode = 0
offset_left = 233.0
offset_right = 249.0
offset_bottom = 16.0
texture = ExtResource("10_olqyp")
expand_mode = 1

[node name="Button" type="Button" parent="setting/TextureRect"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0

[node name="SpinBox" type="SpinBox" parent="setting"]
layout_mode = 0
offset_left = 80.0
offset_top = 55.0
offset_right = 166.563
offset_bottom = 86.0
step = 5.0
value = 100.0
update_on_text_changed = true
suffix = " %"

[node name="Death" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = -88.0
offset_top = -63.0
offset_right = 80.0
offset_bottom = 89.0
script = ExtResource("11_wpjfl")

[node name="Panel" type="Panel" parent="Death"]
z_index = 1
layout_mode = 0
offset_left = -8.0
offset_top = 24.0
offset_right = 176.0
offset_bottom = 112.0

[node name="TextEdit2" type="TextEdit" parent="Death/Panel"]
z_index = 2
layout_mode = 0
offset_left = 48.0
offset_top = 48.0
offset_right = 136.0
offset_bottom = 80.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
text = "    Menu"
editable = false
scroll_fit_content_height = true

[node name="Button" type="Button" parent="Death/Panel/TextEdit2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 88.0
offset_bottom = 35.0

[node name="TextEdit" type="TextEdit" parent="Death/Panel"]
z_index = 2
layout_mode = 0
offset_left = 48.0
offset_top = 8.0
offset_right = 136.0
offset_bottom = 40.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
text = "   Restart"
editable = false
scroll_fit_content_height = true

[node name="Button" type="Button" parent="Death/Panel/TextEdit"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 88.0
offset_bottom = 35.0

[node name="TextEdit" type="TextEdit" parent="Death"]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = -5.0
offset_right = 160.0
offset_bottom = 24.0
theme_override_colors/font_readonly_color = Color(0.989844, 5.48691e-06, 9.62615e-07, 1)
theme_override_font_sizes/font_size = 12
text = "              YOU DIED"
editable = false
scroll_fit_content_height = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Main_UI" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = -40.0
offset_top = -103.0
offset_right = 40.0
offset_bottom = -63.0
script = ExtResource("12_bi64h")

[node name="TextEdit" type="TextEdit" parent="Main_UI"]
layout_mode = 0
offset_left = 2.0
offset_right = 77.0
offset_bottom = 35.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
text = "   00:00"
editable = false
scroll_fit_content_height = true

[node name="Con" type="TextureRect" parent="Main_UI"]
visible = false
layout_mode = 0
offset_left = 248.0
offset_top = -14.0
offset_right = 270.0
offset_bottom = 7.0
texture = ExtResource("13_2ijsl")

[node name="Button" type="Button" parent="Main_UI/Con"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 22.0
offset_bottom = 21.0

[node name="Stop" type="TextureRect" parent="Main_UI"]
layout_mode = 0
offset_left = 248.0
offset_top = -14.0
offset_right = 270.0
offset_bottom = 7.0
texture = ExtResource("14_p1odr")

[node name="Button" type="Button" parent="Main_UI/Stop"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 22.0
offset_bottom = 21.0

[node name="Tutorial" type="TextureRect" parent="Main_UI"]
layout_mode = 0
offset_left = 226.0
offset_top = -14.0
offset_right = 247.0
offset_bottom = 7.0
texture = ExtResource("15_0gysh")

[node name="Button" type="Button" parent="Main_UI/Tutorial"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 21.0
offset_bottom = 21.0

[node name="Tu_Panel" type="Panel" parent="Main_UI"]
visible = false
z_index = 1
layout_mode = 0
offset_left = -96.0
offset_top = 47.0
offset_right = 168.0
offset_bottom = 207.0

[node name="TextEdit" type="TextEdit" parent="Main_UI/Tu_Panel"]
layout_mode = 0
offset_right = 264.0
offset_bottom = 158.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "                             Tutorial
            เดิน = W A S D (เดินเฉียงได้)
 โจมตี = อัตโนมัติ ออกทางหน้า (มีคูลดาวน์)
       หยุดเกม = ESC/II ขวาบน (เปิด/ปิด) 
         ปิดหน้าต่าง = ปุ่ม X ของหน้าต่าง
     !!! ในแมพจะมีกล่องสุ่ม เดินไปชนได้ !!!"
editable = false
scroll_fit_content_height = true

[node name="x" type="TextureRect" parent="Main_UI/Tu_Panel"]
layout_mode = 0
offset_left = 248.0
offset_right = 264.0
offset_bottom = 16.0
texture = ExtResource("10_olqyp")

[node name="Button" type="Button" parent="Main_UI/Tu_Panel/x"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0

[node name="EXP" type="TextEdit" parent="Main_UI"]
layout_mode = 0
offset_left = 8.0
offset_top = 207.0
offset_right = 74.0
offset_bottom = 232.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 9
text = "  EXP     0%"
editable = false
scroll_fit_content_height = true

[node name="END" type="Control" parent="."]
visible = false
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_left = -106.0
offset_top = -57.0
offset_right = 103.0
offset_bottom = 82.0

[node name="Panel" type="Panel" parent="END"]
layout_mode = 0
offset_right = 210.0
offset_bottom = 154.0

[node name="Thank" type="TextEdit" parent="END/Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 8.0
offset_right = 201.0
offset_bottom = 43.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
text = "Thank you For Playing"
editable = false
scroll_fit_content_height = true
scroll_fit_content_width = true

[node name="Announcement" type="TextEdit" parent="END/Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 46.0
offset_right = 205.0
offset_bottom = 108.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
text = "     Give Me A Comment
 & See you Next Update"
editable = false
scroll_fit_content_height = true
scroll_fit_content_width = true

[node name="Again" type="Button" parent="END/Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 113.0
offset_right = 170.0
offset_bottom = 144.0
text = "Return to Menu"

[node name="sword-sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_qqcod")

[node name="chill" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_fs7ks")
parameters/looping = true

[node name="death-sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_olqyp")

[node name="taken-sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_wpjfl")

[node name="click-sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_wpjfl")

[node name="recovery-sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_bi64h")

[node name="heart-sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_2ijsl")
parameters/looping = true

[node name="level-up" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("25_p1odr")
